# routes/api.php
@@ -252,6 +252,7 @@ Route::prefix('v1')->group(function () {
     // Authentication Routes (outside the auth:sanctum middleware)
     Route::post('/register', [AuthController::class, 'register']);
     Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/check-status', [AuthController::class, 'checkStatus']);
     Route::post('/forgot-password', [PasswordResetController::class, 'forgotPassword']);
     Route::post('/reset-password', [PasswordResetController::class, 'resetPassword']);
     Route::post('/auth/google', [AuthController::class, 'googleLogin']);
@@ -260,6 +261,7 @@ Route::prefix('v1')->group(function () {
     Route::prefix('auth')->group(function () {
         Route::post('/register', [AuthController::class, 'register']);
         Route::post('/login', [AuthController::class, 'login']);
+        Route::post('/check-status', [AuthController::class, 'checkStatus']);
         Route::post('/forgot-password', [PasswordResetController::class, 'forgotPassword']);
         Route::post('/reset-password', [PasswordResetController::class, 'resetPassword']);
         Route::post('/google', [AuthController::class, 'googleLogin']);
